# MiniNotifier

./: .gitignore  AGENTS.md  MiniNotifier.slnx  README.md  TASK.md  backend-AGENTS.md  design-system.yaml  doc-AGENTS.md  frontend-AGENTS.md  index.html  infra-AGENTS.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.learnings/: ERRORS.md  LEARNINGS.md
doc/design/: 设计文档.md
doc/devlog/: 2026-03-28-EXE内嵌图标与发布目录精简.md  2026-03-28-GitHubActions打包工作流.md  2026-03-28-Mica标题栏兼容修复.md  2026-03-28-Release新增框架依赖版本.md  2026-03-28-下次提醒时间实时预估修复.md  2026-03-28-单文件发布补齐原生库内嵌.md  2026-03-28-后台自动提醒调度补齐.md  2026-03-28-喝水提醒托盘应用设计文档.md  2026-03-28-喝水提醒方案升级.md  2026-03-28-喝水提醒阶段1视图开发.md  2026-03-28-托盘交互稳定性修复.md  2026-03-28-托盘右键首次卡顿预热优化.md  2026-03-28-提醒弹窗屏幕边界保护.md  2026-03-28-提醒弹窗窗口类型修复.md  2026-03-28-提醒弹窗长文案换行优化.md  2026-03-28-提醒文案增加俏皮和夸赞语气.md  2026-03-28-提醒文案池扩容.md  2026-03-28-提醒正文压缩为三行左右.md  2026-03-28-提醒间隔最低支持1分钟.md  2026-03-28-根据鼠标点击推断工作状态.md  2026-03-28-版本信息与弹窗底部布局优化.md  2026-03-28-真实持久化与随机提醒文案.md  2026-03-28-窄版设置窗口优化.md  2026-03-28-统一应用与托盘图标.md  2026-03-28-设置界面简化.md  2026-03-28-设置窗口闪退与Logo修复.md  2026-03-29-提醒文案取消硬截断.md  (+56 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: message_service.rs  mod.rs  mouse_activity_service.rs  reminder_service.rs  settings_service.rs  settings_store.rs
src-tauri/src/state/: mod.rs
src-ui/: main.tsx
(+98 files in other folders)
