[package]
name = "mininotifier-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "mininotifier_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["clock", "serde"] }
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
